--- a/My Job/Writing/arbeit.tex
+++ b/My Job/Writing/arbeit.tex
@@ -47,7 +47,8 @@
 %\automark[]{section}
 \input{kapitel/kapitel1}
 \input{kapitel/kapitel2}
-
+\input{kapitel/kapitel3}
+\input{kapitel/kapitel4}
 \ifiscorrect\linespread{1.0}\selectfont% Zeilenabstand wieder auf 1 zurück
 \else\fi
 
