--- a/My Job/Writing/extras/header.tex
+++ b/My Job/Writing/extras/header.tex
@@ -28,7 +28,8 @@ numbers=noenddot,
 %\usepackage{mathptmx}           % Times + passende Mathefonts
 \usepackage{mathpazo}           % Palatino + passende Mathefonts
 \usepackage[scaled=.92]{helvet} % skalierte Helvetica als \sfdefault
-\usepackage{courier}            % Courier als \ttdefault
+\usepackage{courier} 
+\usepackage{bm}           % Courier als \ttdefault
 
 \usepackage{graphicx}    % Einbindung von Grafiken
 \graphicspath{{bilder/}} % Unterverzeichnis, in dem Grafiken abgelegt werden
