--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -50,5 +50,88 @@
 @Misc{gracecomponent,
 	author = {NASA},
 	title = {GRACE Mission},
-	note = {\url{https://www.nasa.gov/mission_pages/Grace/spacecraft/index.html},
+	note = {\url{https://www.nasa.gov/mission_pages/Grace/spacecraft/index.html}},
+}
+
+@article{han1995viscoelastic,
+title={The viscoelastic relaxation of a realistically stratified earth, and a further analysis of postglacial rebound},
+author={Han, Dazhong and Wahr, John},
+journal={Geophysical Journal International},
+volume={120},
+number={2},
+pages={287--311},
+year={1995},
+publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{save2016high,
+	title={High-resolution CSR GRACE RL05 mascons},
+	author={Save, Himanshu and Bettadpur, Srinivas and Tapley, Byron D},
+	journal={Journal of Geophysical Research: Solid Earth},
+	volume={121},
+	number={10},
+	pages={7547--7569},
+	year={2016},
+	publisher={Wiley Online Library}
+}
+
+@article{watkins2015improved,
+	title={Improved methods for observing Earth's time variable mass distribution with GRACE using spherical cap mascons},
+	author={Watkins, Michael M and Wiese, David N and Yuan, Dah-Ning and Boening, Carmen and Landerer, Felix W},
+	journal={Journal of Geophysical Research: Solid Earth},
+	volume={120},
+	number={4},
+	pages={2648--2671},
+	year={2015},
+	publisher={Wiley Online Library}
+}
+
+@article{chen2002global,
+	title={Global land precipitation: A 50-yr monthly analysis based on gauge observations},
+	author={Chen, Mingyue and Xie, Pingping and Janowiak, John E and Arkin, Phillip A},
+	journal={Journal of Hydrometeorology},
+	volume={3},
+	number={3},
+	pages={249--266},
+	year={2002}
+}
+
+@article{xie2007gauge,
+	title={A gauge-based analysis of daily precipitation over East Asia},
+	author={Xie, Pingping and Chen, Mingyue and Yang, Song and Yatagai, Akiyo and Hayasaka, Tadahiro and Fukushima, Yoshihiro and Liu, Changming},
+	journal={Journal of Hydrometeorology},
+	volume={8},
+	number={3},
+	pages={607--626},
+	year={2007}
+}
+
+@inproceedings{xie2010cpc,
+	title={CPC unified gauge-based analysis of global daily precipitation},
+	author={Xie, Pingping and Chen, M and Shi, W},
+	booktitle={Preprints, 24th Conf. on Hydrology, Atlanta, GA, Amer. Meteor. Soc},
+	volume={2},
+	year={2010}
+}
+
+@article{kalnay1996ncep,
+	title={The NCEP/NCAR 40-year reanalysis project},
+	author={Kalnay, Eugenia and Kanamitsu, Masao and Kistler, Robert and Collins, William and Deaven, Dennis and Gandin, Lev and Iredell, Mark and Saha, Suranjana and White, Glenn and Woollen, John and others},
+	journal={Bulletin of the American meteorological Society},
+	volume={77},
+	number={3},
+	pages={437--472},
+	year={1996},
+	publisher={American Meteorological Society}
+}
+
+@article{hersbach2020era5,
+	title={The ERA5 global reanalysis},
+	author={Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hirahara, Shoji and Hor{\'a}nyi, Andr{\'a}s and Mu{\~n}oz-Sabater, Joaqu{\'\i}n and Nicolas, Julien and Peubey, Carole and Radu, Raluca and Schepers, Dinand and others},
+	journal={Quarterly Journal of the Royal Meteorological Society},
+	volume={146},
+	number={730},
+	pages={1999--2049},
+	year={2020},
+	publisher={Wiley Online Library}
 }
