--- a/My Job/Writing/extras/titleheader.tex
+++ b/My Job/Writing/extras/titleheader.tex
@@ -26,6 +26,7 @@ numbers=noenddot,
 \usepackage{xspace}         % füge evtl. notwendiges Leerzeichen hinzu (\xspace)
 \usepackage{textcomp}
 \usepackage{cite}
+\usepackage{bm}
 
 %\usepackage{mathptmx}           % Times + passende Mathefonts
 \usepackage{mathpazo}           % Palatino + passende Mathefonts
