--- a/My Job/Writing/arbeit.tex
+++ b/My Job/Writing/arbeit.tex
@@ -49,6 +49,7 @@
 \input{kapitel/kapitel2}
 \input{kapitel/kapitel3}
 \input{kapitel/kapitel4}
+\input{kapitel/kapitel5}
 \ifiscorrect\linespread{1.0}\selectfont% Zeilenabstand wieder auf 1 zurück
 \else\fi
 
