--- a/My Job/Writing/kapitel/kapitel4.tex
+++ b/My Job/Writing/kapitel/kapitel4.tex
@@ -1,5 +1,5 @@
 \chapter{Method}
-\section{Estimating hydrological component combining different datasets}
+\section{Estimating hydrological component combining different datasets}\label{section:combine}
 As mentioned before, the hydrological process can be written as:
 \begin{equation}
 Pre - ET - R = \frac{dS}{dt}
@@ -15,7 +15,7 @@ where
 \end{table}
 For each component in this equation, there are several time series available. For more reliable results, it is necessary to combine them as one time series.\\\\
 The Grace and Grace-Fo provides the EWHA ($S$) with uncertainty ($\sigma_s$), we need to be aware of that these time series are not totally consistent. There are (1) a one-year gap between the GRACE and GRACE-FO and (2) several small gaps. This one-year gap would be ignored since we are interested in the long term trend and these small gaps are dealt using interpolation. In Matlab, this can be done using function \textit{griddedInterpolant}, for the interpolation method, we choose "spline" for EWHA and "linear" for uncertainty. After this, we have 4 consistent EWHA time series $\bm{S_1}$, $\bm{S_2}$, $\bm{S_3}$, $\bm{S_4}$. Since we are only interested in the changing trend $dS / dt$ and the time series are discrete, for each of them we have
-\begin{align}
+\begin{align}\label{eq:dsdt}
 \frac{dS(t)}{dt} = &\frac{(dS(t+\Delta t) - dS(t)) + (dS(t) - dS(t-\Delta t))}{2 \Delta t}\\
 = & \frac{dS(t+\Delta t) - dS(t-\Delta t)}{2 \Delta t}
 \end{align}
@@ -49,7 +49,7 @@ the weighted least squares estimations are:
 &\hat{\bm{y}} = \bm{A}\hat{\bm{x}} = \bm{A}(\bm{A}^T\bm{P}\bm{A})^{-1}\bm{A}^T\bm{P}\bm{y}\\
 &\hat{\bm{e}} = \bm{y} - \hat{\bm{y}} = [\bm{I} - \bm{A}(\bm{A}^T\bm{P}\bm{A})^{-1}\bm{A}^T\bm{P}]\bm{y}
 \end{align}
-\subsection{Getting one time series using Gauss-Markov model}
+\subsection{Getting one time series using Gauss-Markov model}\label{section:oneseries}
 For each month, their are 4 TWSA change $\frac{dS_1(t)}{dt}$, $\frac{dS_2(t)}{dt}$, $\frac{dS_3(t)}{dt}$, $\frac{dS_4(t)}{dt}$ along with their uncertainty $\sigma_{dS_1}$, $\sigma_{dS_2}$, $\sigma_{dS_3}$, $\sigma_{dS_4}$, which are calculated by (3.21) and (3.22). We use the uncertainty to build the weight matrix $\bm{P}$, then we have:
 \begin{align}
 \bm{y} &= \begin{pmatrix}
