--- a/My Job/Writing/kapitel/kapitel3.tex
+++ b/My Job/Writing/kapitel/kapitel3.tex
@@ -202,10 +202,11 @@ The high-quality, global land surface fields provided by GLDAS support several c
 The goal of the FLDAS project is to achieve more effective use of limited available hydroclimatic observations and is designed to be adopted for routine use for FEWS NET decision support. It is a custom instance of the NASA Land Information System (LIS) that has been adapted to work with domains, data streams, and monitoring and forecast requirements associated with food security assessment in data-sparse, developing country settings. Adopting LIS allows FEWS NET to leverage existing land surface models and generate ensembles of soil moisture, ET, and other variables based on multiple meteorological inputs or land surface models.
 \paragraph{optiaonal Simplified Surface Energy Balance (SSEBop)}
 The SSEBop seTup is based on the Simplified Surface Energy Balance (SSEB) approach with unique parameteriyation for operational application combines ET fractions generated from remotely sensed MODIS thermal imagery, acquired every 8 days, with reference ET using a thermal index approach. The unique feature of the SSEBop parameterization is that it uses pre-defined, seasonally dynamic, boundary conditions that are unique to each pixel for the hot/dry and cold/wet reference points.
-\section{Runoff}
+\section{Runoff}\label{sec:runoff}
+\subsection{Global datasets}
 Runoff is quantity of water discharged in surface streams. Runoff includes not only the waters that travel over the land surface and through channels to reach a stream but also interflow, the water that infiltrates the soil surface and travels by means of gravity toward a stream channel (always above the main groundwater level) and eventually empties into the channel. Runoff also includes groundwater that is discharged into a stream; streamflow that is composed entirely of groundwater is termed base flow, or fair-weather runoff, and it occurs where a stream channel intersects the water table.\\\\
 The in-situ run off data are from Global Runoff Data Center (GRDC). The GRDC is an international archive of data up to 200 years old, and fosters multinational and global long-term hydrological studies. Originally established three decades ago, the aim of the GRDC is to help earth scientists analyse global climate trends and assess environmental impacts and risks. Operating under the auspices of WMO the database of quality controlled "historical" mean daily and monthly discharge data grows steadily and currently comprises river discharge data of more than 9,900 stations from 159 countries.\\\\
-However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evatranspiration, models from different data centers play a role. The datasets (\ref{tab:runoff}), which fit the in-situ discharge the best, are chosen while others are denied. The chosen data will then be processed. But it is shown later, that not all these datasets are good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\ref{fig:Salekhard}) is known. Fortunately, it's easy to do that using the \textit{Altbundle} developed by GIS. with the multi-mission satellite altimetry and the existing in-situ data, the discharge till 2020 can be estimated. 
+However, the discharge data from GRDC of Ob river are only up to 2010, which doesn't fit the purpose totally. Thus, like precipitation and evatranspiration, models from different data centers play a role. The datasets (\ref{tab:runoff}), which fit the in-situ discharge the best, are chosen while others are denied. The chosen data will then be processed. But it is shown later, that not all these datasets are good enough. In addition to those hydrological models, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\ref{fig:Salekhard}) is known. 
 \begin{table}[htbp]\centering
 	\begin{tabular}{|l|}
 		\hline
@@ -230,4 +231,6 @@ However, the discharge data from GRDC of Ob river are only up to 2010, which doe
 	\caption{Station Salekhard} 
 	\label{fig:Salekhard}
 \end{figure}
+\subsection{Water Level Height}
+
 \clearpage
