--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -135,3 +135,14 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	year={2020},
 	publisher={Wiley Online Library}
 }
+
+@article{tourian2013quantile,
+	title={A quantile function approach to discharge estimation from satellite altimetry (ENVISAT)},
+	author={Tourian, MJ and Sneeuw, N and B{\'a}rdossy, A},
+	journal={Water Resources Research},
+	volume={49},
+	number={7},
+	pages={4174--4186},
+	year={2013},
+	publisher={Wiley Online Library}
+}
