--- a/My Job/Writing/extras/titelseite.tex
+++ b/My Job/Writing/extras/titelseite.tex
@@ -1,7 +1,7 @@
 % Die Titelseite
 
 %% Header mit Deklarationen
-\input{extras/titleheader}
+\input{titleheader}
 
 \pagestyle{empty}
 \begin{document}
@@ -26,20 +26,19 @@
 
 %  \vspace*{2cm} % kein Bild: diese Zeile "einkommentieren" ...
   \vspace*{1cm} % ... und diese "auskommentieren ..."
-  {\huge {Titel der Studien- oder Diplomarbeit\\[2.5mm]
-    evtl. eine zweite Zeile}}\\[10mm]
+  {\huge {Understanding total water storage gain in Ob river basin using spaceborn Observation}}\\[10mm]
   \vspace*{1cm} % ... und diese "auskommentieren" ...
 
 %  \vspace*{4cm} % kein Bild: diese Zeile "einkommentieren" ...
-  \includegraphics[height=6cm]{logo_gi}\\[10mm] % ... und diese "auskommentieren"
+  \includegraphics[height=8cm]{Obbasin}\\[12mm] % ... und diese "auskommentieren"
 
   \vfill
 
   \Large Studienarbeit im Studiengang\\[2mm]
   \textbf{Geodäsie und Geoinformatik}\\[2mm]
   an der Universität Stuttgart\\[10mm]
-  Vorname V. Name\\[10mm]
-  Stuttgart, Monat 20xx\\[5mm]
+  Ziqing. Yu\\[10mm]
+  Stuttgart, November 2020\\[5mm]
   \rule{\textwidth}{0.5pt}\\[5mm]
   \begin{minipage}{\textwidth}%
   \hfill
@@ -48,10 +47,11 @@
   \end{minipage}
   \quad
   \begin{minipage}[t][3.0cm]{0.6\textwidth}%
-    \large Prof. Dr.-Ing. Nico Sneeuw\\
+    \large Dr.-Ing. Mohammad Tourian \\
     Universität Stuttgart\\[3mm]
-    Dr.-Ing. Heinz Obermann\\
-    Technische Universität Unterdorf%\\[3mm]
+        Peyman Saemian, M.Sc.\\
+        Universität Stuttgart
+        %\\[3mm]
 %    PD Dr.-Ing. Kunz Heinzelmann\\
 %    Polytechnicum Oberstett
   \end{minipage}
